--- a/css/style.css
+++ b/css/style.css
@@ -81,30 +81,43 @@
     display: flex;
     cursor: pointer;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
     text-align: center;
     justify-content: center;
     align-items: center;
-    border: #959595 solid 1px;
-    background-color: #dfdfdf;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25), 0 1px 1px rgba(0, 0, 0, 0.22); }
+    width: 100%;
+    height: 100%; }
     .container .key .letter {
       text-align: center;
       width: 100%; }
     .container .key .sub-letter {
-      font-size: 10px;
-      text-align: left;
-      margin-left: 9px;
+      text-align: center;
       width: 100%; }
-  .container .key:hover {
+    .container .key [data-display="true"] {
+      display: block; }
+    .container .key [data-display="false"] {
+      display: none; }
+  .container .key:hover,
+  .container .key:focus {
     background-color: #c3b8f0;
     border-radius: 10px;
     border-color: #5e3aec;
     box-shadow: 0 2px 5px rgba(81, 42, 236, 0.5), 0 1px 1px rgba(81, 42, 236, 0.45);
     font-weight: 600; }
-  .container [data-special] {
-    background-color: #bbbbbb; }
+  .container [data-class="special"] {
+    background-color: #bbbbbb;
+    border: #959595 solid 1px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25), 0 1px 1px rgba(0, 0, 0, 0.22); }
+  .container [data-class="press"] {
+    background-color: #c3b8f0;
+    border-radius: 20px;
+    border: #5e3aec solid 1px;
+    box-shadow: 0 2px 5px rgba(81, 42, 236, 0.5), 0 1px 1px rgba(81, 42, 236, 0.45);
+    font-weight: 600; }
+  .container [data-class="unpress"] {
+    border: #959595 solid 1px;
+    background-color: #dfdfdf;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25), 0 1px 1px rgba(0, 0, 0, 0.22); }
 
 /*# sourceMappingURL=style.css.map */
