--- a/css/style.css
+++ b/css/style.css
@@ -113,11 +113,26 @@
     border-radius: 20px;
     border: #5e3aec solid 1px;
     box-shadow: 0 2px 5px rgba(81, 42, 236, 0.5), 0 1px 1px rgba(81, 42, 236, 0.45);
-    font-weight: 600; }
+    font-weight: 600;
+    animation: press 0.5s; }
   .container [data-class="unpress"] {
     border: #959595 solid 1px;
     background-color: #dfdfdf;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25), 0 1px 1px rgba(0, 0, 0, 0.22); }
+@keyframes press {
+  0% {
+    opacity: 1;
+    border: #959595 solid 1px;
+    background-color: #dfdfdf;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25), 0 1px 1px rgba(0, 0, 0, 0.22); }
+  100% {
+    opacity: 1;
+    background-color: #c3b8f0;
+    border-radius: 20px;
+    border: #5e3aec solid 1px;
+    box-shadow: 0 2px 5px rgba(81, 42, 236, 0.5), 0 1px 1px rgba(81, 42, 236, 0.45);
+    font-weight: 600; } }
 
 /*# sourceMappingURL=style.css.map */
