--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,8 @@
       background-color: #f8f8f8;
       font-size: 16px;
       resize: none;
-      font-size: 14px; }
+      font-size: 14px;
+      tab-size: 4; }
   .container .keyboard {
     position: absolute;
     display: grid;
@@ -96,8 +97,7 @@
       display: block; }
     .container .key [data-display="false"] {
       display: none; }
-  .container .key:hover,
-  .container .key:focus {
+  .container .key:hover {
     background-color: #c3b8f0;
     border-radius: 10px;
     border-color: #5e3aec;
@@ -114,7 +114,7 @@
     border: #5e3aec solid 1px;
     box-shadow: 0 2px 5px rgba(81, 42, 236, 0.5), 0 1px 1px rgba(81, 42, 236, 0.45);
     font-weight: 600;
-    animation: press 0.5s; }
+    animation: press 0.25s; }
   .container [data-class="unpress"] {
     border: #959595 solid 1px;
     background-color: #dfdfdf;
