--- a/css/style.scss
+++ b/css/style.scss
@@ -55,6 +55,7 @@ $sizePage: 100%;
       font-size: 16px;
       resize: none;
       font-size: 14px;
+      tab-size: 4;
     }
   }
   .keyboard {
@@ -99,7 +100,6 @@ $sizePage: 100%;
   }
 
   .key {
-    // @mixin key {
     display: flex;
     cursor: pointer;
     flex-direction: column;
@@ -108,31 +108,11 @@ $sizePage: 100%;
     align-items: center;
     width: 100%;
     height: 100%;
-    // }
-    // &_unpress {
-    //   @include key;
-    //   border: #959595 solid 1px;
-    //   background-color: #dfdfdf;
-    //   border-radius: 5px;
-    //   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25), 0 1px 1px rgba(0, 0, 0, 0.22);
-    // }
-    // &_press {
-    //   @include key;
-    //   background-color: #c3b8f0;
-    //   border-radius: 20px;
-    //   border-color: #5e3aec;
-    //   box-shadow: 0 2px 5px rgba(81, 42, 236, 0.5), 0 1px 1px rgba(81, 42, 236, 0.45);
-    //   font-weight: 600;
-    // }
-
     .letter {
       text-align: center;
       width: 100%;
     }
     .sub-letter {
-      // font-size: 10px;
-      // text-align: left;
-      // margin-left: 9px;
       text-align: center;
       width: 100%;
     }
@@ -143,8 +123,7 @@ $sizePage: 100%;
       display: none;
     }
   }
-  .key:hover,
-  .key:focus {
+  .key:hover {
     background-color: #c3b8f0;
     border-radius: 10px;
     border-color: #5e3aec;
@@ -166,7 +145,7 @@ $sizePage: 100%;
     box-shadow: 0 2px 5px rgba(81, 42, 236, 0.5), 0 1px 1px rgba(81, 42, 236, 0.45);
     font-weight: 600;
 
-    animation: press 0.5s;
+    animation: press 0.25s;
   }
   [data-class="unpress"] {
     border: #959595 solid 1px;
