--- a/css/style.scss
+++ b/css/style.scss
@@ -52,10 +52,10 @@ $sizePage: 100%;
       border: 2px solid #ccc;
       border-radius: 4px;
       background-color: #f8f8f8;
-      font-size: 16px;
       resize: none;
-      font-size: 14px;
-      tab-size: 4;
+      font-size: 18px;
+      font-family: 'Ubuntu Mono';
+
     }
   }
   .keyboard {
