--- a/css/style.scss
+++ b/css/style.scss
@@ -54,8 +54,7 @@ $sizePage: 100%;
       background-color: #f8f8f8;
       resize: none;
       font-size: 18px;
-      font-family: 'Ubuntu Mono';
-
+      font-family: "Ubuntu Mono";
     }
   }
   .keyboard {
@@ -109,13 +108,31 @@ $sizePage: 100%;
     .letter {
       text-align: center;
       width: 100%;
+      img {
+        width: 20px;
+        height: 20px;
+      }
+      .icon {
+        background-image: url('../assets/images/Language.svg');
+        width: 20px;
+        height: 20px;
+        background-size: 20px;
+      }
     }
     .sub-letter {
       text-align: center;
       width: 100%;
+      .icon {
+        background-image: url('../assets/images/Language.svg');
+        width: 20px;
+        height: 20px;
+        background-size: 20px;
+      }
     }
     [data-display="true"] {
-      display: block;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     [data-display="false"] {
       display: none;
@@ -123,7 +140,6 @@ $sizePage: 100%;
   }
   .key:hover {
     background-color: #c3b8f0;
-    // border-radius: 10px;
     border-color: #5e3aec;
     box-shadow: 0 2px 5px rgba(81, 42, 236, 0.5), 0 1px 1px rgba(81, 42, 236, 0.45);
     font-weight: 600;
